src/static/css/components/Offer/_offer.scss
.offer {
    overflow: hidden;
    position: relative;
    
    &__banner {
        padding: 5rem 0;
        background-image: url('../../../img/Program.jpg');
        background-position: center center;
        background-size: cover;
        background-repeat: no-repeat;
        object-fit: cover;
        display: block;
        border: none;
    }

    &__card {
        text-align: left;
        border: 2px solid #f4e22c;
        border-bottom: 7px solid #f4e22c;
        margin-bottom: 1rem;
        padding: 1rem 2rem;
        border-radius: 6px;
        z-index: 10;

        &-header {
            color: #f4e22c;
            font-weight: 600;
            font-size: 1.875rem;
        }

        &-button {
            outline: none;
            border: none;
            background: transparent;
            cursor: pointer;

            &:focus, &:active {
                outline: none;
            }
        }

        &-text {
            font-size: 1rem;
            margin-bottom: 1rem;
        }

        &-wrapper {
            display: flex;
            flex-direction: column;
            width: 100%;
            overflow-y: auto;
            max-height: 650px;

            &::-webkit-scrollbar {
                width: .5rem;
            }

            &::-webkit-scrollbar-track {
                background: rgba(255, 255, 255, 0);
                border-radius: 50px;
            }

            &::-webkit-scrollbar-thumb {
                background-color: #f4e22c;
                border-radius: 50px;
              }
        }
    }

    &__wrapper {
        display: flex;
        width: 100%;
        justify-content: center;
        padding-left: 15px;
        padding-right: 15px;
        margin: 0 15px;
        z-index: 100;
        
        @media (min-width: 768px) {
            flex: 0 0 35%;
            max-width: 35%;
            padding-right: 2rem;
            margin: 0;
        }
    }

    &__content {
        padding-left: 15px;
        padding-right: 15px;
        display: flex;
        width: 100%;
        overflow: hidden;
        order: -1;
        z-index: 100;
        
        @media (min-width: 768px) {
            order: 0;
            flex: 0 0 65%;
            max-width: 65%;
            padding-left: 2rem;
        }

        &--wrapper {
            display: flex;
            flex-direction: column;
            height: 0;
            opacity: 0;
            transition: all .3s ease;

            &-animate {
                opacity: 1;
                height: 100%;
            }
        }
    }

    &__text {
        text-align: left;
        margin-bottom: 2rem;
        font-size: 1.2rem;
        transition: .3s all ease;
        padding-left: 15px;
        padding-right: 15px;

        &--subheading {
            color: #000;
            font-weight: 600;
        }

        &--animate {
            transform: translateX(0);
        }
    }

    &__header {

        h1 {
            font-size: 3rem;
            font-weight: 400;
            margin-bottom: 2rem;
            text-align: left;
            padding-left: 15px;
            padding-right: 15px;

        }
    }
}

.backdrop {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 50;
    background: rgba(255,255,255,.5);

    @media (min-width: 768px) {
        display: none;
    }
}

